--- a/crates/hayride-ui/Cargo.toml
+++ b/crates/hayride-ui/Cargo.toml
@@ -4,7 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+codee = { version = "0.2", features = [
+    "json_serde",
+    "msgpack_serde",
+    "base64",
+    "prost",
+] }
 leptos = {version = "0.7.0", features = ["csr"]}
+leptos-use = "0.14.0"
 leptos_router = "0.7.0"
 wasm-bindgen = "0.2.99"
 wasm-bindgen-futures = "0.4.49"
