--- a/crates/hayride-ui/package.json
+++ b/crates/hayride-ui/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "preline": "^2.6.0",
+    "daisyui": "^4.12.22",
     "tailwindcss": "^3.4.16"
   }
 }
