--- a/crates/hayride-ui/Cargo.toml
+++ b/crates/hayride-ui/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.39"
 codee = { version = "0.2", features = [
     "json_serde",
     "msgpack_serde",
@@ -18,3 +19,7 @@ serde = "1.0.217"
 serde_json = "1.0.134"
 wasm-bindgen = "0.2.99"
 wasm-bindgen-futures = "0.4.49"
+
+
+[package.metadata.leptos]
+assets-dir = "public"
