--- a/crates/hayride-ui/Cargo.toml
+++ b/crates/hayride-ui/Cargo.toml
@@ -20,4 +20,5 @@ serde_json = "1.0.134"
 wasm-bindgen = "0.2.99"
 wasm-bindgen-futures = "0.4.49"
 
-
+[package.metadata.leptos]
+assets-dir = "public"
