--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,6 @@ wasm-bindgen = "0.2.99"
 wasm-bindgen-futures = "0.4.49"
 
 [features]
-default = []
+default = ["lancedb", "llamacpp"]
 lancedb = ["hayride-runtime/lancedb"]
 llamacpp = ["hayride-runtime/llamacpp"]
