--- a/crates/hayride-lancedb/Cargo.toml
+++ b/crates/hayride-lancedb/Cargo.toml
@@ -12,4 +12,5 @@ arrow-schema = { workspace = true }
 futures = { workspace = true }
 log ={ workspace = true }
 tokio = { workspace = true, features = ["full"] }
+lance = { workspace = true, features = ["protoc"] }
 lancedb = { workspace = true, features = ["sentence-transformers"] }
