--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ reactive_stores = "0.1.2"
 reqwasm = "0.5.0"
 wasm-bindgen = "0.2.99"
 wasm-bindgen-futures = "0.4.49"
+wit-bindgen = "0.41.0"
 
 [features]
 default = ["lancedb", "llamacpp"]
