--- a/crates/hayride-ui/Cargo.toml
+++ b/crates/hayride-ui/Cargo.toml
@@ -14,6 +14,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
+wit-bindgen = { workspace = true }
 
 [package.metadata.leptos]
 assets-dir = "public"
