feat: use env to set log file path, separate daemon log file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ hayride-core = { workspace = true }
 hayride-runtime = { workspace = true }
 hayride-utils = { workspace = true }
 anyhow = { workspace = true }
+log = { workspace = true }
 tokio = { workspace = true }
 dirs = { workspace = true }
 wasmtime = { workspace = true }
