feat: use morph path for wac plug with file path fallback

--- a/crates/hayride-wac/Cargo.toml
+++ b/crates/hayride-wac/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 
 [dependencies]
 hayride-host-traits = { workspace = true }
+hayride-utils = { workspace = true }
 
 anyhow = { workspace = true }
 indexmap = { workspace = true }
