--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,10 @@ jobs:
         run: |
           rustup target add x86_64-unknown-linux-gnu
 
-      - name: Install curl dependencies
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y curl \
+          sudo apt-get install -y libgomp1 curl \
             libcurl4-openssl-dev \
             gcc-x86-64-linux-gnu \
             g++-x86-64-linux-gnu
