fix: bump hayride-llama-rs-sys verion

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgomp1 curl \
+          sudo apt-get install -y curl \
             libcurl4-openssl-dev \
             gcc-x86-64-linux-gnu \
             g++-x86-64-linux-gnu
