--- a/crates/hayride-runtime/Cargo.toml
+++ b/crates/hayride-runtime/Cargo.toml
@@ -31,6 +31,7 @@ uuid = { workspace = true }
 wasmtime = { workspace = true}
 wasmtime-wasi = { workspace = true }
 wasmtime-wasi-http = { workspace = true }
+windows-sys = { workspace = true }
 
 [features]
 default = []
