--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ hayride-lancedb = { path = "crates/hayride-lancedb" }
 hayride-llama = { path = "crates/hayride-llama" }
 hayride-wac = { path = "crates/hayride-wac" }
 
-hayride-llama-rs-sys = "0.0.3"
+hayride-llama-rs-sys = "0.0.4"
 
 anyhow = "1.0.91"
 async-trait = "0.1.86"
@@ -67,6 +67,7 @@ tokio-util = { version = "0.7.13", features = ["compat"] }
 toml = "0.7"
 url = "2.5.4"
 uuid = { version = "1.14.0", features = ["v4"] }
+windows-sys = "0.59.0"
 wasmtime = "29.0.1"
 wasmtime-wasi = "29.0.1"
 wasmtime-wasi-http = "29.0.1"
@@ -75,7 +76,7 @@ wit-parser = "0.225.0"
 # lancedb deps
 arrow-array = "54.1"
 arrow-schema = "54.1"
-lance = { version = "0.25.0", features = ["protoc"] }
+lance = { version = "0.25.0" }
 lancedb = { version = "0.18.2", features = ["sentence-transformers"] }
 
 # wac deps
@@ -95,6 +96,10 @@ reqwasm = "0.5.0"
 wasm-bindgen = "0.2.99"
 wasm-bindgen-futures = "0.4.49"
 wit-bindgen = "0.41.0"
+
+[target.'cfg(unix)'.dependencies]
+# remove need for external protoc, except on windows
+lance = { version = "0.25.0", features = ["protoc"] }
 
 [features]
 default = ["lancedb", "llamacpp"]
