--- a/crates/hayride-utils/Cargo.toml
+++ b/crates/hayride-utils/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
+dirs = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
 log-reload = { workspace = true }
