--- a/wit/deps.toml
+++ b/wit/deps.toml
@@ -1,7 +1,8 @@
-ai = "https://github.com/hayride-dev/coven/releases/download/v0.0.59/hayride_ai_v0.0.59.tar.gz"
-core = "https://github.com/hayride-dev/coven/releases/download/v0.0.59/hayride_core_v0.0.59.tar.gz"
-hayride-http = "https://github.com/hayride-dev/coven/releases/download/v0.0.59/hayride_http_v0.0.59.tar.gz"
-silo = "https://github.com/hayride-dev/coven/releases/download/v0.0.59/hayride_silo_v0.0.59.tar.gz"
-socket = "https://github.com/hayride-dev/coven/releases/download/v0.0.59/hayride_socket_v0.0.59.tar.gz"
-wasip2 = "https://github.com/hayride-dev/coven/releases/download/v0.0.59/hayride_wasip2_v0.0.59.tar.gz"
-wac = "https://github.com/hayride-dev/coven/releases/download/v0.0.59/hayride_wac_v0.0.59.tar.gz"
+http = "https://github.com/WebAssembly/wasi-http/archive/refs/tags/v0.2.0.tar.gz"
+ai = "https://github.com/hayride-dev/coven/releases/download/v0.0.60/hayride_ai_v0.0.60.tar.gz"
+core = "https://github.com/hayride-dev/coven/releases/download/v0.0.60/hayride_core_v0.0.60.tar.gz"
+hayride-http = "https://github.com/hayride-dev/coven/releases/download/v0.0.60/hayride_http_v0.0.60.tar.gz"
+silo = "https://github.com/hayride-dev/coven/releases/download/v0.0.60/hayride_silo_v0.0.60.tar.gz"
+socket = "https://github.com/hayride-dev/coven/releases/download/v0.0.60/hayride_socket_v0.0.60.tar.gz"
+wasip2 = "https://github.com/hayride-dev/coven/releases/download/v0.0.60/hayride_wasip2_v0.0.60.tar.gz"
+wac = "https://github.com/hayride-dev/coven/releases/download/v0.0.60/hayride_wac_v0.0.60.tar.gz"
