--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ hayride-host-traits = { path = "crates/hayride-host-traits" }
 hayride-lancedb = { path = "crates/hayride-lancedb" }
 hayride-llama = { path = "crates/hayride-llama" }
 hayride-wac = { path = "crates/hayride-wac" }
+hayride-db = { path = "crates/hayride-db" }
 hayride-core = { path = "crates/hayride-core" }
 
 hayride-llama-rs-sys = "0.0.4"
@@ -82,6 +83,11 @@ arrow-schema = "54.1"
 lance = { version = "0.25.0" }
 lancedb = { version = "0.18.2", features = ["sentence-transformers"] }
 
+# db deps
+native-tls = "0.2.14"
+postgres-native-tls = "0.5.1"
+tokio-postgres = "0.7.13"
+
 # wac deps
 indexmap = "2.8.0"
 miette = "7.5.0"
@@ -105,7 +111,8 @@ wit-bindgen = "0.41.0"
 lance = { version = "0.25.0", features = ["protoc"] }
 
 [features]
-default = ["lancedb", "llamacpp", "hf"]
+default = ["lancedb", "llamacpp", "hf", "postgres"]
 lancedb = ["hayride-runtime/lancedb"]
 llamacpp = ["hayride-runtime/llamacpp"]
 hf = ["hayride-runtime/hf"]
+postgres = ["hayride-runtime/postgres"]
