--- a/crates/hayride-db/Cargo.toml
+++ b/crates/hayride-db/Cargo.toml
@@ -18,3 +18,4 @@ tokio-util = { workspace = true }
 chrono = { workspace = true, features = ["serde"] }
 uuid = { workspace = true, features = ["serde"] }
 serde_json = { workspace = true }
+futures = { workspace = true }
