--- a/crates/hayride-db/Cargo.toml
+++ b/crates/hayride-db/Cargo.toml
@@ -10,12 +10,28 @@ hayride-utils = { workspace = true }
 
 anyhow = { workspace = true }
 log = { workspace = true }
+url = { workspace = true }
+
+# PostgreSQL dependencies
 native-tls = { workspace = true }
 postgres-native-tls = { workspace = true }
-tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tokio-postgres = { workspace = true, features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
+
+# SQLite dependencies (optional)
+rusqlite = { version = "0.29", features = ["bundled", "chrono", "uuid"], optional = true }
+
+# Common dependencies
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tokio-util = { workspace = true }
 chrono = { workspace = true, features = ["serde"] }
 uuid = { workspace = true, features = ["serde"] }
 serde_json = { workspace = true }
 futures = { workspace = true }
+
+[features]
+default = ["postgres", "sqlite"]
+postgres = []
+sqlite = ["rusqlite"]
+
+[dev-dependencies]
+env_logger = "0.10"
