--- a/crates/hayride-db/Cargo.toml
+++ b/crates/hayride-db/Cargo.toml
@@ -16,6 +16,7 @@ url = { workspace = true }
 native-tls = { workspace = true }
 postgres-native-tls = { workspace = true }
 tokio-postgres = { workspace = true, features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
+rust_decimal = { workspace = true, features = ["db-postgres"] }
 
 # SQLite dependencies (optional)
 rusqlite = { version = "0.29", features = ["bundled", "chrono", "uuid"], optional = true }
