--- a/crates/hayride-host-traits/Cargo.toml
+++ b/crates/hayride-host-traits/Cargo.toml
@@ -18,6 +18,7 @@ postgres-types = { version = "0.2", optional = true, features = ["derive"] }
 chrono = { workspace = true, optional = true }
 uuid = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
+rust_decimal = { workspace = true, optional = true }
 
 [features]
-postgres = ["postgres-types", "chrono", "uuid", "serde_json"]
+postgres = ["postgres-types", "chrono", "uuid", "serde_json", "rust_decimal"]
