--- a/crates/hayride-runtime/Cargo.toml
+++ b/crates/hayride-runtime/Cargo.toml
@@ -40,4 +40,4 @@ default = []
 lancedb = ["dep:hayride-lancedb"]
 llamacpp = ["dep:hayride-llama"]
 hf = ["dep:hayride-hf"]
-postgres = ["hayride-host-traits/postgres"]
+postgres = ["hayride-db/postgres"]
