--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ lancedb = { version = "0.18.2", features = ["sentence-transformers"] }
 
 # db deps
 native-tls = "0.2.14"
+postgres-types = "0.2.6"
 postgres-native-tls = "0.5.1"
 tokio-postgres = "0.7.13"
 rust_decimal    = "1.27.0"
