--- a/crates/hayride-runtime/Cargo.toml
+++ b/crates/hayride-runtime/Cargo.toml
@@ -41,3 +41,4 @@ lancedb = ["dep:hayride-lancedb"]
 llamacpp = ["dep:hayride-llama"]
 hf = ["dep:hayride-hf"]
 postgres = ["hayride-db/postgres"]
+sqlite = ["hayride-db/sqlite"]
