--- a/crates/hayride-db/Cargo.toml
+++ b/crates/hayride-db/Cargo.toml
@@ -12,13 +12,13 @@ anyhow = { workspace = true }
 log = { workspace = true }
 url = { workspace = true }
 
-# PostgreSQL dependencies
-native-tls = { workspace = true }
-postgres-native-tls = { workspace = true }
-postgres-types = { workspace = true }
-tokio-postgres = { workspace = true, features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
-rust_decimal = { workspace = true, features = ["db-postgres"] }
-bytes = { workspace = true }
+# PostgreSQL dependencies (optional)
+native-tls = { workspace = true, optional = true }
+postgres-native-tls = { workspace = true, optional = true }
+postgres-types = { workspace = true, optional = true }
+tokio-postgres = { workspace = true, features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"], optional = true }
+rust_decimal = { workspace = true, features = ["db-postgres"], optional = true }
+bytes = { workspace = true, optional = true }
 
 # SQLite dependencies (optional)
 rusqlite = { workspace = true, features = ["bundled", "chrono", "uuid"], optional = true }
@@ -32,8 +32,7 @@ serde_json = { workspace = true }
 futures = { workspace = true }
 
 [features]
-default = ["postgres", "sqlite"]
-postgres = []
+postgres = ["native-tls", "postgres-native-tls", "postgres-types", "tokio-postgres", "rust_decimal", "bytes"]
 sqlite = ["rusqlite"]
 
 [dev-dependencies]
