feat: implement Hayride db host interface with postgres and sqlite support (#69)
* wip: implement hayride-db crate and host trait

* feat: add db ctx and view, implement db runtime, update deps, implement close and logging

* feat: update to coven v0.0.65, update db interface and traits

* fix: use query stream for rows to implement next for db

* feat: add db connection string parsing, add support for sqlite

* fix: convert numeric values for postgres

* fix: cargo fmt

* fix: workspace members and deps update for hayride-db

* fix: update deps

* fix: separate mcp imports from ai for enabling

* fix: cargo fmt

* fix: postgres tosql for dbvalue to use postgres type for conversion

* fix: move postgres specific dbvalue trait to hayride-db crate

* fix: cleanup feature gating for hayride-db

--- a/crates/hayride-runtime/Cargo.toml
+++ b/crates/hayride-runtime/Cargo.toml
@@ -12,6 +12,7 @@ hayride-llama = { workspace = true, optional = true }
 hayride-lancedb = { workspace = true, optional = true }
 hayride-hf = { workspace = true, optional = true }
 hayride-wac = { workspace = true }
+hayride-db = { workspace = true }
 hayride-core = { workspace = true }
 
 anyhow = { workspace = true}
@@ -39,3 +40,5 @@ default = []
 lancedb = ["dep:hayride-lancedb"]
 llamacpp = ["dep:hayride-llama"]
 hf = ["dep:hayride-hf"]
+postgres = ["hayride-db/postgres"]
+sqlite = ["hayride-db/sqlite"]
